# Dr-Mario-cpp

./: .gitattributes  .gitignore  Block.cpp  CMakeLists.txt  Capsule.h  Constants.h  Doxyfile  README.md  Virus.cpp  embedResources.py  main.cpp
Engine/: GameEngine.cpp  GameEngine.h
Engine/States/: GameState.h
Resources/Sprites/: atlas.json
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  googletest-download.cmake  googletest.cmake
docs/html/: _block_8cpp.html  _block_8h.html  _block_8h_source.html  _board_8cpp.html  _board_8h.html  _board_8h_source.html  _capsule_8cpp.html  _capsule_8h.html  _capsule_8h_source.html  _constants_8h.html  _constants_8h_source.html  _drawable_object_8h.html  _drawable_object_8h_source.html  _game_engine_8cpp.html  _game_engine_8h.html  _game_engine_8h_source.html  _game_state_8h.html  _game_state_8h_source.html  _game_utils_8cpp.html  _game_utils_8h.html  _game_utils_8h_source.html  _main_menu_state_8cpp.html  _main_menu_state_8h.html  _main_menu_state_8h_source.html  _options_state_8cpp.html  _options_state_8h.html  _options_state_8h_source.html  _render_utils_8cpp.html  _render_utils_8h.html  _render_utils_8h_source.html  _single_player_state_8cpp.html  _single_player_state_8h.html  _single_player_state_8h_source.html  _virus_8cpp.html  _virus_8h.html  _virus_8h_source.html  annotated.html  class_block-members.html  class_block.html  class_board-members.html  (+45 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  (+30 more)
src/main/: Block.h  CMakeLists.txt  Capsule.cpp  Constants.h  GameUtils.h  Virus.h  enums.h  main.cpp
src/main/Board/: Block.cpp  Block.h  Board.cpp  Board.h  Capsule.cpp  Capsule.h  DrawableObject.h  GameUtils.cpp  GameUtils.h  Virus.cpp  Virus.h
src/main/Engine/: GameEngine.cpp  GameEngine.h  GameUtils.cpp  GameUtils.h  RenderUtils.cpp  RenderUtils.h
src/main/Engine/Rendering/: AnimatedSprite.cpp  AnimatedSprite.h  GameRenderer.cpp  GameRenderer.h  RenderUtils.cpp  RenderUtils.h  Sprite.cpp  Sprite.h
src/main/Engine/States/: GameState.h  MainMenuState.cpp  MainMenuState.h  MainMenuStateDraw.cpp  OptionsState.cpp  OptionsState.h  OptionsStateDraw.cpp  SinglePlayerState.cpp  SinglePlayerState.h  SinglePlayerStateDraw.cpp
src/main/Resources/: spritesheets.h
src/test/: CMakeLists.txt  GameUtilsTest.cpp  exampleTest.cpp  main.cpp
